fix bug with border-high-contrast to ensure it has proper specificity (#183)

--- a/css/src/atomics/border.scss
+++ b/css/src/atomics/border.scss
@@ -40,10 +40,10 @@
 
 // Modifiers
 .border-high-contrast {
-	border: $border-width solid $border-white-high-contrast;
+	border: $border-width solid $border-white-high-contrast !important;
 
 	&-hover:hover {
-		border: $border-width solid $border-yellow-high-contrast;
+		border: $border-width solid $border-yellow-high-contrast !important;
 	}
 }
 
